traefik/k8s/error-page-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-page
  namespace: monsters
  labels:
    app: error-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-page
  template:
    metadata:
      labels:
        app: error-page
    spec:
      serviceAccountName: traefik-sa
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: error-page-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: error-page-volume
        configMap:
          name: error-page-html
      - name: nginx-config-volume
        configMap:
          name: nginx-config
